<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_crop_scenarios"
            android:title="@string/menu_crop_scenaarios" />
        <item
            android:id="@+id/nav_water_harvest"
            android:title="@string/menu_water_harvest_scenaarios" />
        <item
            android:id="@+id/nav_weather_trends"
            android:title="@string/menu_weather_trends" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>