<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home"
    tools:ignore="ExtraText">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.thales.idverification.modules.dashboard.ui.HomeFragment"
        android:label="@string/home_fragment_title"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_villageDataFragment"
            app:destination="@id/villageDataFragment" />
        <action
            android:id="@+id/action_nav_home_to_loginActivity"
            app:destination="@id/loginActivity" />
    </fragment>
    <fragment
        android:id="@+id/villageDataFragment"
        android:name="com.thales.idverification.modules.dashboard.ui.VillageDataFragment"
        tools:layout="@layout/fragment_village_data" >
        <action
            android:id="@+id/action_villageDataFragment_to_rainfallDetailsFragment"
            app:destination="@id/rainfallDetailsFragment" />
        <action
            android:id="@+id/action_villageDataFragment_to_surfaceStorageFragment"
            app:destination="@id/surfaceStorageFragment" />
        <action
            android:id="@+id/action_villageDataFragment_to_moistureFragment"
            app:destination="@id/moistureFragment" />
        <action
            android:id="@+id/action_villageDataFragment_to_villageUseFragment"
            app:destination="@id/villageUseFragment"/>
        <action
            android:id="@+id/action_villageDataFragment_to_villageEvaporationFragment"
            app:destination="@id/villageEvaporationFragment" />
        <action
            android:id="@+id/action_villageDataFragment_to_otherSourcesFragment"
            app:destination="@id/otherSourcesFragment" />
        <action
            android:id="@+id/action_villageDataFragment_to_cropDetailsFragment"
            app:destination="@id/cropDetailsFragment"
            />
        <action
            android:id="@+id/action_villageDataFragment_to_loginActivity"
            app:destination="@id/loginActivity" />
    </fragment>
    <fragment
        android:id="@+id/rainfallDetailsFragment"
        android:name="com.thales.idverification.modules.watersources.ui.RainfallDetailsFragment"
        android:label="@string/rainfall_details_rainfall"
        tools:layout="@layout/fragment_rainfall_details" >
        <action
            android:id="@+id/action_rainfallDetailsFragment_to_loginActivity"
            app:destination="@id/loginActivity" />
    </fragment>
    <fragment
        android:id="@+id/surfaceStorageFragment"
        android:name="com.thales.idverification.modules.watersources.ui.SurfaceStorageFragment"
        android:label="@string/surface_storage_surface_storage"
        tools:layout="@layout/fragment_surface_storage" >
        <action
            android:id="@+id/action_surfaceStorageFragment_to_loginActivity"
            app:destination="@id/loginActivity" />
    </fragment>
    <fragment
        android:id="@+id/moistureFragment"
        android:name="com.thales.idverification.modules.watersources.ui.moisture.MoistureDetailsFragment"
        android:label="@string/moisture_details_soil_moisture_and_ground_water"
        tools:layout="@layout/fragment_moisture_details">
        <action
            android:id="@+id/action_moistureFragment_to_loginActivity"
            app:destination="@id/loginActivity" />
    </fragment>
    <fragment
        android:id="@+id/villageUseFragment"
        android:name="com.thales.idverification.modules.waterconsumption.ui.VillageUseFragment"
        android:label="@string/village_use_village_use"
        tools:layout="@layout/fragment_village_use" >
        <action
            android:id="@+id/action_villageUseFragment_to_loginActivity"
            app:destination="@id/loginActivity" />
    </fragment>
    <fragment
        android:id="@+id/villageEvaporationFragment"
        android:name="com.thales.idverification.modules.waterconsumption.ui.EvaporationDataFragment"
        android:label="@string/consumption_evaporation"
        tools:layout="@layout/fragment_village_data" >
        <action
            android:id="@+id/action_villageEvaporationFragment_to_loginActivity"
            app:destination="@id/loginActivity" />
    </fragment>
    <fragment
        android:id="@+id/otherSourcesFragment"
        android:name="com.thales.idverification.modules.watersources.ui.OtherSourcesFragment"
        android:label="OtherSourcesFragment" >
        <action
            android:id="@+id/action_otherSourcesFragment_to_loginActivity"
            app:destination="@id/loginActivity" />
    </fragment>
    <fragment
        android:id="@+id/cropDetailsFragment"
        android:name="com.thales.idverification.modules.cropplan.ui.CropDetailsFragment"
        android:label="@string/crop_details_crops"
        tools:layout="@layout/fragment_crop_details">
        <action
            android:id="@+id/action_cropDetailsFragment_to_loginActivity"
            app:destination="@id/loginActivity" />
    </fragment>
    <activity
        android:id="@+id/loginActivity"
        android:name="com.thales.idverification.modules.login.ui.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
</navigation>