<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.thales.idverification.modules.login.ui.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="#807DC4DD">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/water_level" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/librebaskerville_regular"
            android:gravity="center"
            android:text="@string/registration_title"
            android:textColor="@color/text_dark"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            android:visibility="invisible"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            android:layout_marginTop="100dp"
            android:hint="@string/login_phone_field_hint"
            android:paddingBottom="14dp"
            android:inputType="textPersonName"
            android:textSize="16sp"
            android:textColor="@color/text_dark"
            android:textColorHint="@color/text_dark_hint"
            android:backgroundTint="@color/text_dark_hint"
            android:fontFamily="@font/librebaskerville_regular"
            android:maxLength="120"/>

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/editText"
            android:layout_marginTop="35dp"
            android:hint="@string/registration_name_field_hint"
            android:paddingBottom="14dp"
            android:inputType="textPersonName"
            android:textSize="16sp"
            android:textColor="@color/text_dark"
            android:textColorHint="@color/text_dark_hint"
            android:backgroundTint="@color/text_dark_hint"
            android:fontFamily="@font/librebaskerville_regular"
            android:maxLength="120"/>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/editText1"
            android:layout_marginTop="35dp"
            android:hint="@string/registration_email_field_hint"
            android:paddingBottom="14dp"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:textColor="@color/text_dark"
            android:textColorHint="@color/text_dark_hint"
            android:backgroundTint="@color/text_dark_hint"
            android:fontFamily="@font/librebaskerville_regular"/>

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/editText2"
            android:layout_marginTop="35dp"
            android:hint="@string/enter_otp_field_hint"
            android:paddingBottom="14dp"
            android:inputType="number"
            android:textSize="16sp"
            android:maxLength="4"
            android:textColor="@color/text_dark"
            android:textColorHint="@color/text_dark_hint"
            android:backgroundTint="@color/text_dark_hint"
            android:fontFamily="@font/librebaskerville_regular"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/librebaskerville_regular"
            android:text="@string/enter_otp_error_incorrect_otp"
            android:textColor="@color/red_700"
            android:textSize="15sp"
            android:visibility="invisible"
            android:layout_marginEnd="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/editText3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="RESEND"
            android:layout_marginStart="5dp"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textView2"
            app:layout_constraintTop_toTopOf="@id/textView2"
            android:fontFamily="@font/librebaskerville_regular"
            android:textStyle="bold"
            android:textColor="@color/green_dark"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_style"
            android:textColor="@color/white"
            android:text="@string/registration_submit_button"
            android:textAllCaps="false"
            android:padding="4dp"
            android:paddingTop="6dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:fontFamily="@font/librebaskerville_regular"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>